# mini-lambda

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/test-wasm/: build.sh  test-wasm.wasm
crates/cli/test-wasm/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  errors.rs  job.rs  lib.rs  main.rs
crates/client/test-wasm/: Cargo.toml  build.sh  fib.wasm  http.wasm  sleep.wasm  test-wasm.wasm
crates/client/test-wasm/src/: main.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator-tui/: Cargo.toml
crates/orchestrator-tui/src/: app.rs  main.rs  ui.rs
crates/orchestrator/src/: cli_api.rs  client_api.rs  diagnostics.rs  errors.rs  handlers.rs  heartbeat.rs  job_queue.rs  main.rs  orchestrator.rs  queue.rs  registry.rs  worker_api.rs
crates/orchestrator/src/tui/: mod.rs  render.rs  state.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/proto/: cli_api.proto  client_api.proto  executor.proto  orchestrator.proto  shared.proto  worker_api.proto
crates/shared/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: credit_guard.rs  errors.rs  executor.rs  heartbeat.rs  job_guard.rs  job_ticket.rs  main.rs  module_cache.rs  orchestrator_client.rs  queue_ticket.rs  registration.rs  runner.rs  submission.rs  worker.rs
