[workspace]
members = [
  "crates/shared",
  "crates/cli",
  "crates/cli/test-wasm",
  "crates/worker",
  "crates/orchestrator", 
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tonic = { version = "0.14.2", features = [] }
prost = { version = "0.14.3", features = [] }
tonic-prost-build = { version = "0.14.2", features = [] }
tonic-prost = { version = "0.14.2", features = [] }
tokio = { version = "1.49.0", features = ["full"] }