[workspace]
members = [
  "crates/shared",
  "crates/client",
  "crates/client/test-wasm",
  "crates/worker",
  "crates/orchestrator", 
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tonic = { version = "0.14", features = [] }
prost = { version = "0.14", features = [] }
tonic-prost-build = { version = "0.14", features = [] }
tonic-prost = { version = "0.14", features = [] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = [] }
tokio-util = { version = "0.7" }
thiserror = { version = "2" }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = { version = "0.10" }
serde = { version = "1", features = ["derive"]}
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = { version = "6.1" }