[package]
name = "mini-lambda-client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["fs"] }
reqwest = { workspace = true, features = ["json","rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
mini-lambda-proto = { path = "../proto" }
anyhow = { workspace = true }
