[package]
name = "mini-lambda-orchestrator-tui"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.29"
mini-lambda-proto = { path = "../proto" }
