[package]
name = "orchestrator"
version = "0.1.0"
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tonic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = []}
priority-queue = { version = "2.7.0" }
hashlink = { version = "0.11.0"}