[package]
name = "orchestrator"
version = "0.1.0"
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = []}
priority-queue = { version = "2.7" }
hashlink = { version = "0.11"}
clap = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = {workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }