[package]
name = "orchestrator"
version = "0.1.0"
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = []}
priority-queue = { version = "2.7" }
hashlink = { version = "0.11"}
clap = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = {workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-logger = { version = "0.18", features = ["tracing-support"] }
futures = "0.3"
log = "0.4"