[package]
name = "mini-lambda-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true}
reqwest = { workspace = true}
async-trait = { workspace = true }
