[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tonic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
wasmtime = { version = "43.0.0" }
wasmtime-wasi = { version = "43.0.0" }
