[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
wasmtime = { version = "43.0.0" }
wasmtime-wasi = { version = "43.0.0" }
dashmap = { version = "6.1.0" }
blake3 = {version = "1.8.4" }
lru = { version = "0.16.3" }
jsonwebtoken = { workspace = true }
