[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
wasmtime = { version = "43.0" }
wasmtime-wasi = { version = "43.0" }
dashmap = { workspace = true}
blake3 = {version = "1.8" }
lru = { version = "0.16" }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
